--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "build:style-loader": "webpack --config ./loader-runner/examples/webpack.style.config.js"
   },
   "author": "miracles",
   "dependencies": {
@@ -12,6 +13,16 @@
     "@babel/parser": "^7.17.0",
     "@babel/traverse": "^7.17.0",
     "@babel/types": "^7.17.0",
-    "tapable": "^2.2.1"
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "loader-runner": "^4.3.0",
+    "memfs": "^3.4.1",
+    "tapable": "^2.2.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1",
+    "jsdom": "^19.0.0"
   }
 }
