--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build:style-loader": "webpack --config ./loader-runner/examples/webpack.style.config.js"
+    "build:style-loader": "webpack --config ./loader-runner/examples/webpack.style.config.js",
+    "build:less-loader": "webpack --config ./loader-runner/examples/webpack.less.config.js"
   },
   "author": "miracles",
   "dependencies": {
@@ -15,6 +16,7 @@
     "@babel/types": "^7.17.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "less": "^4.1.2",
     "loader-runner": "^4.3.0",
     "memfs": "^3.4.1",
     "tapable": "^2.2.1",
