--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "build:style-loader": "webpack --config ./loader-runner/examples/webpack.style.config.js",
-    "build:less-loader": "webpack --config ./loader-runner/examples/webpack.less.config.js"
+    "build:less-loader": "webpack --config ./loader-runner/examples/webpack.less.config.js",
+    "build:file-loader": "webpack --config ./loader-runner/examples/webpack.file.config.js"
   },
   "author": "miracles",
   "dependencies": {
@@ -18,6 +19,7 @@
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.2",
     "loader-runner": "^4.3.0",
+    "loader-utils": "^3.2.0",
     "memfs": "^3.4.1",
     "tapable": "^2.2.1",
     "webpack": "^5.72.0",
